# blid-test

./: .gitignore  Cargo.toml
src/: cookie_manager.rs  main.rs
templates/: archive_ui.html  edit.html  index.html  layout.html  new.html  rows.html  show.html
