[package]
name = "blid-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = [ "macros" ] }
tokio = { version = "1", features = [ "full" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
anyhow = "1"
tera = "1"
once_cell = "1"
itertools = "*"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
tower-http = { version = "0.5", features = [ "trace" ] }
reqwest = {version = "0.12", features = ["json"]}
rand = "0.8"

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[dev-dependencies]
dotenv = "0.15.0"
