[package]
name = "blid-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["form"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.13"
anyhow = "1"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
once_cell = "1"
itertools = "*"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
dotenv_codegen = "0.15.0"
base64 = "0.22"
tower-cookies = "0.10.0"

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[dev-dependencies]
dotenv = "0.15.0"
